--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,3 +1,5 @@
 <!--=include head.html -->
 <!--=include header.html -->
+<!--=include about.html -->
+<!--=include features.html -->
 <!--=include footer.html -->
