--- a/app/index.html
+++ b/app/index.html
@@ -53,13 +53,98 @@
         </div>
       </div>
     </section>
-<!-- SECTION FEATURES -->
-<section class="features">
-  <div class="container">
-    <i class="icon-basic-world"></i>
-
-  </div>
-</section>
+    <!-- SECTION FEATURES -->
+    <section class="features">
+      <div class="container">
+        <div class="features__wrapper">
+          <!--  Card 1  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-world"></i>
+            </div>
+            <h3 class="card__title title--large">Explore the world</h3>
+            <p class="card__text">
+              Ab adipisci aliquam asperiores cumque dignissimos eaque earum.
+            </p>
+          </div>
+          <!--  Card 2  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-compass"></i>
+            </div>
+            <h3 class="card__title title--large">Meet nature</h3>
+            <p class="card__text">
+              A, amet animi explicabo facilis harum, id, in modi molestias neque nostrum.
+            </p>
+          </div>
+          <!--  Card 3  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-map"></i>
+            </div>
+            <h3 class="card__title title--large">Find your way</h3>
+            <p class="card__text">
+              Assumenda atque, corporis culpa deserunt dicta doloremque doloribus.
+          </div>
+          <!--  Card 4  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-heart"></i>
+            </div>
+            <h3 class="card__title title--large">Life a healthier life</h3>
+            <p class="card__text">
+              Debitis ea earum maxime molestias nobis, quaerat quidem quos recusandae sed?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- SECTION TOURS -->
+    <section class="tours">
+      <div class="container">
+        <div class="tours__wrapper">
+          <!--  Card 1  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-world"></i>
+            </div>
+            <h3 class="card__title title--large">Explore the world</h3>
+            <p class="card__text">
+              Ab adipisci aliquam asperiores cumque dignissimos eaque earum.
+            </p>
+          </div>
+          <!--  Card 2  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-compass"></i>
+            </div>
+            <h3 class="card__title title--large">Meet nature</h3>
+            <p class="card__text">
+              A, amet animi explicabo facilis harum, id, in modi molestias neque nostrum.
+            </p>
+          </div>
+          <!--  Card 3  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-map"></i>
+            </div>
+            <h3 class="card__title title--large">Find your way</h3>
+            <p class="card__text">
+              Assumenda atque, corporis culpa deserunt dicta doloremque doloribus.
+          </div>
+          <!--  Card 4  -->
+          <div class="card">
+            <div class="card__icon">
+              <i class="card__icon-item icon-basic-heart"></i>
+            </div>
+            <h3 class="card__title title--large">Life a healthier life</h3>
+            <p class="card__text">
+              Debitis ea earum maxime molestias nobis, quaerat quidem quos recusandae sed?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- SECTION FOOTER -->
