--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -2,4 +2,5 @@
 <!--=include header.html -->
 <!--=include about.html -->
 <!--=include features.html -->
+<!--=include tours.html -->
 <!--=include footer.html -->
