--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
       <div class="container">
         <h2 class="tours__title title title--extra-large">Most popular tours</h2>
         <div class="tours__wrapper">
+          <!--  Card 1  -->
           <div class="tour-card card--yellow">
             <div class="tour-card__side">
               <div class="tour-card__side tour-card__side--front">
@@ -121,7 +122,53 @@
                 <div class="tour-card__side-wrapper">
                   <p class="tour-card__text">only</p>
                   <div class="tour-card__price">$297</div>
-                  <a href="#" class="button">Book now!</a>
+                  <a href="#" class="button button--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--  Card 2  -->
+          <div class="tour-card card--green">
+            <div class="tour-card__side">
+              <div class="tour-card__side tour-card__side--front">
+                <div class="tour-card__image"></div>
+                <h4 class="tour-card__image-title"><span>The forest</span><span>hiker</span></h4>
+                <ul class="tour-card__list">
+                  <li class="tour-card__list-item">7 days tour</li>
+                  <li class="tour-card__list-item">Up to 40 people</li>
+                  <li class="tour-card__list-item">6 tour guides</li>
+                  <li class="tour-card__list-item">Sleep in provided tents</li>
+                  <li class="tour-card__list-item">Difficulty: medium</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side--back">
+                <div class="tour-card__side-wrapper">
+                  <p class="tour-card__text">only</p>
+                  <div class="tour-card__price">$497</div>
+                  <a href="#" class="button button--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--  Card 3  -->
+          <div class="tour-card card--blue">
+            <div class="tour-card__side">
+              <div class="tour-card__side tour-card__side--front">
+                <div class="tour-card__image"></div>
+                <h4 class="tour-card__image-title"><span>The snow</span><span>adventurer</span></h4>
+                <ul class="tour-card__list">
+                  <li class="tour-card__list-item">5 days tour</li>
+                  <li class="tour-card__list-item">Up to 15 people</li>
+                  <li class="tour-card__list-item">3 tour guides</li>
+                  <li class="tour-card__list-item">Sleep in provided tents</li>
+                  <li class="tour-card__list-item">Difficulty: hard</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side--back">
+                <div class="tour-card__side-wrapper">
+                  <p class="tour-card__text">only</p>
+                  <div class="tour-card__price">$897</div>
+                  <a href="#" class="button button--white">Book now!</a>
                 </div>
               </div>
             </div>
