finish fist card in section stories and make some fixes in code

--- a/app/index.html
+++ b/app/index.html
@@ -177,6 +177,25 @@
         <a href="#" class="button button--green">Discover all tours</a>
       </div>
     </section>
+<!-- SECTION STORIES -->
+<section class="stories">
+  <div class="container">
+    <h2 class="stories__title title title--extra-large">We make people genuinely happy</h2>
+    <div class="stories__wrapper">
+      <div class="story">
+        <figure class="story__image">
+          <img src="./images/nat-8.webp" alt="Person on a tour">
+        </figure>
+        <div class="story__content">
+          <h3 class="story__title title--large">I had the best week ever with my family</h3>
+          <p class="story__text">
+            Ab, dolore et eveniet ex facere, fugiat illum iure magnam nihil odit, quis quo tempora ut. Debitis dignissimos minus nisi tempora voluptatem.Animi architecto dignissimos dolorem doloribus eos est, fugiat ipsa itaque laboriosam natus, nemo nesciunt nobis non obcaecati quia quidem quisquam.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   </main>
 
   <!-- SECTION FOOTER -->
