--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -3,4 +3,5 @@
 <!--=include about.html -->
 <!--=include features.html -->
 <!--=include tours.html -->
+<!--=include stories.html -->
 <!--=include footer.html -->
