--- a/app/index.html
+++ b/app/index.html
@@ -179,12 +179,21 @@
     </section>
 <!-- SECTION STORIES -->
 <section class="stories">
+  <div class="bg-video">
+    <video class="bg-video__content" autoplay muted loop>
+      <source src="images/video.mp4" type="video/mp4">
+      <source src="images/video.webm" type="video/webm">
+      Your browser is not supported video
+    </video>
+  </div>
   <div class="container">
     <h2 class="stories__title title title--extra-large">We make people genuinely happy</h2>
     <div class="stories__wrapper">
+      <!-- story 1-->
       <div class="story">
         <figure class="story__image">
           <img src="./images/nat-8.webp" alt="Person on a tour">
+          <figcaption class="story__image-name">Mary Smith</figcaption>
         </figure>
         <div class="story__content">
           <h3 class="story__title title--large">I had the best week ever with my family</h3>
@@ -193,7 +202,21 @@
           </p>
         </div>
       </div>
+      <!-- story 2-->
+      <div class="story">
+        <figure class="story__image">
+          <img src="./images/nat-9.webp" alt="Person on a tour">
+          <figcaption class="story__image-name">Jack Wilson</figcaption>
+        </figure>
+        <div class="story__content">
+          <h3 class="story__title title--large">WOW! My life is completely different now</h3>
+          <p class="story__text">
+            Aperiam, atque consectetur corporis cumque distinctio earum excepturi ipsum magni maxime modi nisi odit optio pariatur perferendis possimus provident quae quasi rem rerum sequi, similique sint vel veniam voluptate voluptatibus. Debitis facere incidunt maxime possimus sit!
+          </p>
+        </div>
+      </div>
     </div>
+    <a class="btn" href="#">Read all stories</a>
   </div>
 </section>
   </main>
