start section book

--- a/app/index.html
+++ b/app/index.html
@@ -177,48 +177,58 @@
         <a href="#" class="button button--green">Discover all tours</a>
       </div>
     </section>
-<!-- SECTION STORIES -->
-<section class="stories">
-  <div class="bg-video">
-    <video class="bg-video__content" autoplay muted loop>
-      <source src="images/video.mp4" type="video/mp4">
-      <source src="images/video.webm" type="video/webm">
-      Your browser is not supported video
-    </video>
-  </div>
-  <div class="container">
-    <h2 class="stories__title title title--extra-large">We make people genuinely happy</h2>
-    <div class="stories__wrapper">
-      <!-- story 1-->
-      <div class="story">
-        <figure class="story__image">
-          <img src="./images/nat-8.webp" alt="Person on a tour">
-          <figcaption class="story__image-name">Mary Smith</figcaption>
-        </figure>
-        <div class="story__content">
-          <h3 class="story__title title--large">I had the best week ever with my family</h3>
-          <p class="story__text">
-            Ab, dolore et eveniet ex facere, fugiat illum iure magnam nihil odit, quis quo tempora ut. Debitis dignissimos minus nisi tempora voluptatem.Animi architecto dignissimos dolorem doloribus eos est, fugiat ipsa itaque laboriosam natus, nemo nesciunt nobis non obcaecati quia quidem quisquam.
-          </p>
+    <!-- SECTION STORIES -->
+    <section class="stories">
+      <div class="bg-video">
+        <video class="bg-video__content" autoplay muted loop>
+          <source src="images/video.mp4" type="video/mp4">
+          <source src="images/video.webm" type="video/webm">
+          Your browser is not supported video
+        </video>
+      </div>
+      <div class="container">
+        <h2 class="stories__title title title--extra-large">We make people genuinely happy</h2>
+        <div class="stories__wrapper">
+          <!-- story 1-->
+          <div class="story">
+            <figure class="story__image">
+              <img src="./images/nat-8.webp" alt="Person on a tour">
+              <figcaption class="story__image-name">Mary Smith</figcaption>
+            </figure>
+            <div class="story__content">
+              <h3 class="story__title title--large">I had the best week ever with my family</h3>
+              <p class="story__text">
+                Ab, dolore et eveniet ex facere, fugiat illum iure magnam nihil odit, quis quo tempora ut. Debitis dignissimos minus nisi tempora voluptatem.Animi architecto dignissimos dolorem doloribus eos est, fugiat ipsa itaque laboriosam natus, nemo nesciunt nobis non obcaecati quia quidem quisquam.
+              </p>
+            </div>
+          </div>
+          <!-- story 2-->
+          <div class="story">
+            <figure class="story__image">
+              <img src="./images/nat-9.webp" alt="Person on a tour">
+              <figcaption class="story__image-name">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__content">
+              <h3 class="story__title title--large">WOW! My life is completely different now</h3>
+              <p class="story__text">
+                Aperiam, atque consectetur corporis cumque distinctio earum excepturi ipsum magni maxime modi nisi odit optio pariatur perferendis possimus provident quae quasi rem rerum sequi, similique sint vel veniam voluptate voluptatibus. Debitis facere incidunt maxime possimus sit!
+              </p>
+            </div>
+          </div>
+        </div>
+        <a class="btn" href="#">Read all stories</a>
+      </div>
+    </section>
+    <!-- SECTION BOOK -->
+    <section class="book">
+      <div class="container">
+        <div class="book__wrapper">
+          <form action="#" class="form">
+            <h2 class="book__title title title--extra-large">We make people genuinely happy</h2>
+          </form>
         </div>
       </div>
-      <!-- story 2-->
-      <div class="story">
-        <figure class="story__image">
-          <img src="./images/nat-9.webp" alt="Person on a tour">
-          <figcaption class="story__image-name">Jack Wilson</figcaption>
-        </figure>
-        <div class="story__content">
-          <h3 class="story__title title--large">WOW! My life is completely different now</h3>
-          <p class="story__text">
-            Aperiam, atque consectetur corporis cumque distinctio earum excepturi ipsum magni maxime modi nisi odit optio pariatur perferendis possimus provident quae quasi rem rerum sequi, similique sint vel veniam voluptate voluptatibus. Debitis facere incidunt maxime possimus sit!
-          </p>
-        </div>
-      </div>
-    </div>
-    <a class="btn" href="#">Read all stories</a>
-  </div>
-</section>
+    </section>
   </main>
 
   <!-- SECTION FOOTER -->
