--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -4,4 +4,5 @@
 <!--=include features.html -->
 <!--=include tours.html -->
 <!--=include stories.html -->
+<!--=include book.html -->
 <!--=include footer.html -->
