--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,20 @@
 </head>
 <body>
   <!-- SECTION HEADER -->
+   <div class="navigation">
+    <input class="navigation__checkbox" type="checkbox" id="nav-toggle">
+    <label class="navigation__button" for="nav-toggle">MENU</label>
+    <div class="navigation__background">&nbsp;</div>
+    <nav class="navigation__box">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+      </ul>
+    </nav>
+   </div>
   <header class="header">
 <!--  logo  -->
     <div class="header__logo">
