--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,41 @@
 </head>
 <body>
   <!-- SECTION HEADER -->
-   <div class="navigation">
+  <header class="header">
+    <!--  logo  -->
+    <div class="header__logo">
+      <img src="images/logo-white.webp" alt="Natours logo">
+    </div>
+    <!-- header navigation -->
+    <nav class="navigation__box">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#about" class="navigation__link"><span>01</span>About Natours</a></li>
+        <li class="navigation__item"><a href="#features" class="navigation__link"><span>02</span>Your benefits</a></li>
+        <li class="navigation__item"><a href="#tours" class="navigation__link"><span>03</span>Popular tours</a></li>
+        <li class="navigation__item"><a href="#stories" class="navigation__link"><span>04</span>Stories</a></li>
+        <li class="navigation__item"><a href="#book" class="navigation__link"><span>05</span>Book now</a></li>
+      </ul>
+    </nav>
+    <!-- header navigation button -->
+    <div class="navigation__button">
+      <span class="navigation__button-line navigation__button-line--top"></span>
+      <span class="navigation__button-line navigation__button-line--middle"></span>
+      <span class="navigation__button-line navigation__button-line--bottom"></span>
+    </div>
+    <!-- navigation background -->
+    <div class="navigation__background">&nbsp;</div>
+    <!--  header content  -->
+    <div class="header__content">
+      <h1 class="header__title"><span class="header__title-top">Outdoors</span><span class="header__title-bottom">is where life happens</span></h1>
+      <div class="header__button"><a href="#popup" class="button button--white button--animated">Discover our tours</a></div>
+    </div>
+  </header>
+  <main>
+  
+  
+  
+  <!-- SECTION HEADER -->
+  <!-- <div class="navigation">
     <input class="navigation__checkbox" type="checkbox" id="nav-toggle">
     <label class="navigation__button" for="nav-toggle">
       <span class="navigation__button-line navigation__button-line--top"></span>
@@ -25,7 +59,7 @@
     <div class="navigation__background">&nbsp;</div>
     <nav class="navigation__box">
       <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+        <li class="navigation__item"><a href="#about" class="navigation__link"><span>01</span>About Natours</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
@@ -34,19 +68,17 @@
     </nav>
    </div>
   <header class="header">
-<!--  logo  -->
     <div class="header__logo">
-      <img src="images/logo-white.png" alt="Natours">
+      <img src="images/logo-white.webp" alt="Natours logo">
     </div>
-<!--  header content  -->
     <div class="header__content">
       <h1 class="header__title"><span class="header__title-top">Outdoors</span><span class="header__title-bottom">is where life happens</span></h1>
       <div class="header__button"><a href="#popup" class="button button--white button--animated">Discover our tours</a></div>
     </div>
   </header>
-  <main>
+  <main> -->
     <!-- SECTION ABOUT -->
-    <section class="about">
+    <section id="about" class="about">
       <div class="container">
         <h2 class="about__title title title--extra-large">Exiting tours for adventurous people</h2>
         <div class="about__wrapper">
@@ -64,15 +96,15 @@
             <a href="#" class="btn">Learn more &rarr;</a>
           </div>
           <div class="about__images">
-            <img src="./images/nat-1-large.jpg" alt="Photo of nature" class="about__images-item about__images-item--1">
-            <img src="./images/nat-2-large.jpg" alt="Photo of nature" class="about__images-item about__images-item--2">
-            <img src="./images/nat-3-large.jpg" alt="Photo of nature" class="about__images-item about__images-item--3">
+            <img src="./images/nat-1-large.webp" alt="Photo of mount and river" class="about__images-item about__images-item--1">
+            <img src="./images/nat-2-large.webp" alt="Photo women walk on mount peak" class="about__images-item about__images-item--2">
+            <img src="./images/nat-3-large.webp" alt="Photo men ride on bike on panorama mouting" class="about__images-item about__images-item--3">
           </div>
         </div>
       </div>
     </section>
     <!-- SECTION FEATURES -->
-    <section class="features">
+    <section id="features" class="features">
       <div class="container">
         <div class="features__wrapper">
           <!--  Card 1  -->
@@ -196,7 +228,7 @@
       </div>
     </section>
     <!-- SECTION STORIES -->
-    <section class="stories">
+    <section id="stories" class="stories">
       <div class="bg-video">
         <video class="bg-video__content" autoplay muted loop>
           <source src="images/video.mp4" type="video/mp4">
@@ -238,7 +270,7 @@
       </div>
     </section>
     <!-- SECTION BOOK -->
-    <section class="book">
+    <section id="book" class="book">
       <div class="container">
         <div class="book__wrapper">
           <form action="#" class="form">
